ensure we don't get nasty wrap in the a message's name block

--- a/HipChat.AdiumMessageStyle/Contents/Resources/main.css
+++ b/HipChat.AdiumMessageStyle/Contents/Resources/main.css
@@ -36,6 +36,10 @@ height:1px;
 clear:both;
 }
 
+table {
+  table-layout: fixed;
+}
+
 li {
 margin-left:35px;
 }
